# bewise-test

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: deps.py  main.py  messages.py  models.py  routes.py  schemas.py  service.py
app/db/: base.py  orm.py  repos.py
bewise_test/app/: config.py  deps.py  main.py  messages.py  models.py  routes.py  schemas.py  service.py
bewise_test/app/db/: base.py  orm.py  repos.py
