[tool.poetry]
name = "bewise-test"
version = "0.1.0"
description = ""
authors = ["Alexey Serikov <serikov.alexey42@gmail.com>"]
readme = "README.md"
packages = [{include = "bewise_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
aio-pika = "^9.5.4"
uvicorn = "^0.34.0"
aiokafka = "^0.12.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
